<resources>
<string name="app_name">Password Keeper 1.0</string>
<string name="password_keeper_label">Password Keeper</string>
<string name="add">Add</string>
<string name="edit">Edit</string>
<string name="delete">Delete</string>
<string name="search">Search</string>
<string name="addition">Addition</string>
<string name="help">Help</string>
<string name="nameLabel">Name :</string>
<string name="addressLabel">Address :</string>
<string name="passwordLabel">Password :</string>
<string name="commentsLabel">Comments :</string>
<string name="save">Save</string>
<string name="cancel">Cancel</string>
<string name="discard">Discard</string>
<string name="showpassoff">Show Password</string>
<string name="showpasson">Show Password</string>
<string name="username">Username</string>
<string name="title_activity_details">Details</string>
</resources>
