<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roman.passkeeper.MainActivity">

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/linearLayout"
        android:layout_alignParentRight="true"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"      >

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@android:drawable/ic_input_add"
            android:contentDescription="@string/addition"
            android:padding="@dimen/abc_text_size_button_material"
            android:text="@string/add"
            android:textSize="@dimen/abc_text_size_display_1_material" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_search"
            android:text="@string/search"
            android:textSize="@dimen/abc_text_size_display_1_material" />

        <Button
            android:id="@+id/buttonHelp"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_help"
            android:text="@string/help"
            android:textSize="@dimen/abc_text_size_display_1_material" />

    </LinearLayout>



</RelativeLayout>
