<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roman.passkeeper.DetailsActivity">



    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <TableRow
            android:id="@+id/tableRowName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left">

            <TextView
                android:id="@+id/textViewNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_column="0"
                android:layout_span="1"
                android:enabled="false"

                android:text="@string/nameLabel"
                android:textColor="#0e1fa4"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center"
                android:layout_span="1"
                android:inputType="text"
                android:textColor="#00FF00"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_span="1"
                android:enabled="false"

                android:text="@string/addressLabel"
                android:textColor="#0e1fa4"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/textViewAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center"
                android:layout_span="1"
                android:inputType="text"
                android:textColor="#00FF00"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewUsernamelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_span="1"
                android:enabled="false"
                android:labelFor="@+id/editText"
                android:text="@string/username"
                android:textColor="#0e1fa4"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center"
                android:layout_span="1"
                android:inputType="text"
                android:textColor="#00FF00"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_span="1"
                android:enabled="false"
                android:text="@string/passwordLabel"
                android:textColor="#0e1fa4"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center"
                android:layout_span="1"
                android:inputType="textPassword"
                android:password="true"
                android:textColor="#00FF00"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowComments"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewCommentsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_span="1"
                android:enabled="false"
                android:text="@string/commentsLabel"
                android:textColor="#0e1fa4"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/textViewComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center"
                android:layout_span="1"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="#00FF00"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold|italic" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>


    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tableLayout"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discard" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonErase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />

        <ToggleButton
            android:id="@+id/buttonShowP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/showpassoff"
            android:textOn="@string/showpasson" />
    </LinearLayout>

</RelativeLayout>
